--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -11,63 +11,65 @@
 		{%- endif -%}
 
 		<!-- Main content -->
-		<div class="banner" id="dictionary_banner">
-			<div class="banner_icon" id="dictionary_icon">
-				<ion-icon name="reader"></ion-icon>
-			</div>
-			<div class="banner_title" id="dictionary_title">Dictionary</div>
-		</div>
-		<div class="dictionary_body">
-			<div class="superpanel" id="dictionary_superpanel">
-				<button type="button" class="btn btn-deep-orange superpanel_menu_btn" id="menu_dictionary_toggleall_btn" title="Toggle all dictionaries"
-					action="{{url_for('dictionaries_toggleall', enable='on')}}" {{'disabled' if dictionaries|length == 0}} style="float: right;">
-					<ion-icon name="toggle"></ion-icon>
-					<span> Toggle All </span>
-				</button>
-				<button type="button" class="btn btn-mdb-color superpanel_menu_btn" id="menu_dictionary_dlall_btn" title="Download all dictionaries"
-					action="{{url_for('dictionaries_download_all')}}" {{'disabled' if dictionaries|length == 0}}>
-					<ion-icon name="download-outline"></ion-icon>
-					<span> Download All </span>
-				</button>
-				<a role="button" class="btn btn-unique superpanel_menu_btn" id="menu_dictionary_honorifics_btn" title="Go to Honorifics page"
-					href="{{url_for('honorifics')}}">
-					<ion-icon name="earth"></ion-icon>
-					<span> Honorifics </span>
-				</a>
-			</div>
-
-			<div class="superpanel_menu_searchbar_div" id="menu_dictionary_searchbar_div">
-				<div class="md-form active-cyan-2 mb-3" id="menu_dictionary_searchbar">
-					<input class="form-control" type="text" placeholder="Search Dictionaries" aria-label="Search">
+		<div class="section_body">
+			<div class="banner" id="dictionary_banner">
+				<div class="banner_icon" id="dictionary_icon">
+					<ion-icon name="reader"></ion-icon>
 				</div>
+				<div class="banner_title" id="dictionary_title">Dictionary</div>
 			</div>
+			<div class="dictionary_body">
+				<div class="superpanel" id="dictionary_superpanel">
+					<button type="button" class="btn btn-deep-orange superpanel_menu_btn" id="menu_dictionary_toggleall_btn" title="Toggle all dictionaries"
+						action="{{url_for('dictionaries_toggleall', enable='on')}}" {{'disabled' if dictionaries|length == 0}} style="float: right;">
+						<ion-icon name="toggle"></ion-icon>
+						<span> Toggle All </span>
+					</button>
+					<button type="button" class="btn btn-mdb-color superpanel_menu_btn" id="menu_dictionary_dlall_btn" title="Download all dictionaries"
+						action="{{url_for('dictionaries_download_all')}}" {{'disabled' if dictionaries|length == 0}}>
+						<ion-icon name="download-outline"></ion-icon>
+						<span> Download All </span>
+					</button>
+					<a role="button" class="btn btn-unique superpanel_menu_btn" id="menu_dictionary_honorifics_btn" title="Go to Honorifics page"
+						href="{{url_for('honorifics')}}">
+						<ion-icon name="earth"></ion-icon>
+						<span> Honorifics </span>
+					</a>
+				</div>
 
-			<div class="flashpanel notranslate" id="dictionary_flashpanel">
-				<!-- Flashed messages -->
-				{% with messages = get_flashed_messages(with_categories=true) %}
-					{{ flash_alert(messages) }}
-				{% endwith %}
-			</div>
-
-			<div class="mainpanel" id="dictionary_mainpanel">
-				<!-- Novel entries -->
-				{% for dictionary in dictionaries %}
-					{{ dictionary_entry(dictionary) }}
-				{% endfor %}
-
-				{% if dictionaries|length == 1 %}
-				<div class="page_empty_div" id="no_dictionaries_div">
-					<!-- No series dictionaries to display -->
-					<div class="page_empty_img_div" id="no_dictionaries_img_div">
-						<img src="{{url_for('static', filename='dictionary_nothing_here.jpg')}}" class="page_empty_img" id="no_dictionaries_img">
-					</div>
-					<div class="page_empty_text_div" id="no_dictionaries_text_div">
-						Got no other dictionaries cuz' your library is empty
-						<br>
-						Start by adding a series in <span style="color: var(--library_color_primary); font-weight: bold;">Library</span>
+				<div class="superpanel_menu_searchbar_div" id="menu_dictionary_searchbar_div">
+					<div class="md-form active-cyan-2 mb-3" id="menu_dictionary_searchbar">
+						<input class="form-control" type="text" placeholder="Search Dictionaries" aria-label="Search">
 					</div>
 				</div>
-				{% endif %}
+
+				<div class="flashpanel notranslate" id="dictionary_flashpanel">
+					<!-- Flashed messages -->
+					{% with messages = get_flashed_messages(with_categories=true) %}
+						{{ flash_alert(messages) }}
+					{% endwith %}
+				</div>
+
+				<div class="mainpanel" id="dictionary_mainpanel">
+					<!-- Novel entries -->
+					{% for dictionary in dictionaries %}
+						{{ dictionary_entry(dictionary) }}
+					{% endfor %}
+
+					{% if dictionaries|length == 1 %}
+					<div class="page_empty_div" id="no_dictionaries_div">
+						<!-- No series dictionaries to display -->
+						<div class="page_empty_img_div" id="no_dictionaries_img_div">
+							<img src="{{url_for('static', filename='dictionary_nothing_here.jpg')}}" class="page_empty_img" id="no_dictionaries_img">
+						</div>
+						<div class="page_empty_text_div" id="no_dictionaries_text_div">
+							Got no other dictionaries cuz' your library is empty
+							<br>
+							Start by adding a series in <span style="color: var(--library_color_primary); font-weight: bold;">Library</span>
+						</div>
+					</div>
+					{% endif %}
+				</div>
 			</div>
 		</div>
 	</section>
