--- a/app/templates/honorifics.html
+++ b/app/templates/honorifics.html
@@ -19,80 +19,81 @@
 		{{ remove_honorific_modal() }}
 
 		<!-- Main content -->
-		<div class="banner" id="honorifics_banner">
-			<div class="banner_icon" id="honorifics_icon">
-				<ion-icon name="earth"></ion-icon>
+		<div class="section_body">
+			<div class="banner" id="honorifics_banner">
+				<div class="banner_icon" id="honorifics_icon">
+					<ion-icon name="earth"></ion-icon>
+				</div>
+				<div class="banner_title" id="honorifics_title">Honorifics</div>
 			</div>
-			<div class="banner_title" id="honorifics_title">Honorifics</div>
-		</div>
-		<div class="honorifics_body">
-			<div class="superpanel" id="honorifics_superpanel">
-				<!-- Toggle All button -->
-				<button type="button" class="btn mdb-color darken-1 superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics"
-				action="{{url_for('honorifics_toggleall', enable='on')}}" {{'disabled' if honorifics|length == 0}} style="float: right;">
-					<ion-icon name="toggle"></ion-icon>
-					<span> Toggle All </span>
-				</button>
-				<!-- Add Honorific button -->
-				<button type="button" class="btn light-green superpanel_menu_btn modal_trigger" id="menu_honorifics_add_btn" data-toggle="modal" data-target="#add_honorific_modal_push" title="Add honorific">
-					<ion-icon name="add-outline"></ion-icon>
-					<span> Add Honorific </span>
-				</button>
-			</div>
+			<div class="honorifics_body">
+				<div class="superpanel" id="honorifics_superpanel">
+					<!-- Toggle All button -->
+					<button type="button" class="btn mdb-color darken-1 superpanel_menu_btn" id="menu_honorifics_toggleall_btn" title="Toggle all honorifics"
+					action="{{url_for('honorifics_toggleall', enable='on')}}" {{'disabled' if honorifics|length == 0}} style="float: right;">
+						<ion-icon name="toggle"></ion-icon>
+						<span> Toggle All </span>
+					</button>
+					<!-- Add Honorific button -->
+					<button type="button" class="btn light-green superpanel_menu_btn modal_trigger" id="menu_honorifics_add_btn" data-toggle="modal" data-target="#add_honorific_modal_push" title="Add honorific">
+						<ion-icon name="add-outline"></ion-icon>
+						<span> Add Honorific </span>
+					</button>
+				</div>
 
-			<div class="superpanel_menu_searchbar_div" id="menu_honorifics_searchbar_div">
-				<div class="md-form active-cyan-2 mb-3" id="menu_honorifics_searchbar">
-					<input class="form-control" type="text" placeholder="Search Honorifics" aria-label="Search">
+				<div class="superpanel_menu_searchbar_div" id="menu_honorifics_searchbar_div">
+					<div class="md-form active-cyan-2 mb-3" id="menu_honorifics_searchbar">
+						<input class="form-control" type="text" placeholder="Search Honorifics" aria-label="Search">
+					</div>
+				</div>
+
+				<div class="flashpanel" id="honorifics_flashpanel">
+					<!-- Flashed messages -->
+					{% with messages = get_flashed_messages(with_categories=true) %}
+						{{ flash_alert(messages) }}
+					{% endwith %}
+				</div>
+
+				<div class="mainpanel" id="honorifics_mainpanel">
+					<!-- Novel entries -->
+					{% if honorifics|length == 0 %}
+						<!-- No chapters to display -->
+						<div class="page_empty_div" id="no_series_div">
+							<div class="page_empty_img_div" id="no_series_img_div">
+								<img src="{{url_for('static', filename='library_nothing_here.jpg')}}" class="page_empty_img" id="no_series_img">
+							</div>
+							<div class="page_empty_text_div "id="no_series_text_div">
+								No honorifics! Start by hitting <span class="light-green-text font-weight-bold">Add Honorific</span>
+							</div>
+						</div>
+					{% else %}
+						<!-- Japanese honorifics -->
+						<div class="honorifics_lang_div jp_lang_div"> Japanese </div>
+						<div style="overflow-y: hidden;">
+							<div class="honorifics_lang_content jp_lang_content">
+								{% for honorific in honorifics %}
+									{% if honorific.lang.value == 1 %}
+										{{ honorific_entry(honorific, "jp") }}
+									{% endif %}
+								{% endfor %}
+							</div>
+						</div>
+
+						<!-- Chinese honorifics -->
+						<div class="honorifics_lang_div cn_lang_div"> Chinese </div>
+						<div style="overflow-y: hidden;">
+							<div class="honorifics_lang_content cn_lang_content">
+								{% for honorific in honorifics %}
+									{% if honorific.lang.value == 2 %}
+										{{ honorific_entry(honorific, "cn") }}
+									{% endif %}
+								{% endfor %}
+							</div>
+						</div>
+					{% endif %}
 				</div>
 			</div>
-
-			<div class="flashpanel" id="honorifics_flashpanel">
-				<!-- Flashed messages -->
-				{% with messages = get_flashed_messages(with_categories=true) %}
-					{{ flash_alert(messages) }}
-				{% endwith %}
-			</div>
-
-			<div class="mainpanel" id="honorifics_mainpanel">
-				<!-- Novel entries -->
-				{% if honorifics|length == 0 %}
-					<!-- No chapters to display -->
-					<div class="page_empty_div" id="no_series_div">
-						<div class="page_empty_img_div" id="no_series_img_div">
-							<img src="{{url_for('static', filename='library_nothing_here.jpg')}}" class="page_empty_img" id="no_series_img">
-						</div>
-						<div class="page_empty_text_div "id="no_series_text_div">
-							No honorifics! Start by hitting <span class="light-green-text font-weight-bold">Add Honorific</span>
-						</div>
-					</div>
-				{% else %}
-					<!-- Japanese honorifics -->
-					<div class="honorifics_lang_div jp_lang_div"> Japanese </div>
-					<div style="overflow-y: hidden;">
-						<div class="honorifics_lang_content jp_lang_content">
-							{% for honorific in honorifics %}
-								{% if honorific.lang.value == 1 %}
-									{{ honorific_entry(honorific, "jp") }}
-								{% endif %}
-							{% endfor %}
-						</div>
-					</div>
-
-					<!-- Chinese honorifics -->
-					<div class="honorifics_lang_div cn_lang_div"> Chinese </div>
-					<div style="overflow-y: hidden;">
-						<div class="honorifics_lang_content cn_lang_content">
-							{% for honorific in honorifics %}
-								{% if honorific.lang.value == 2 %}
-									{{ honorific_entry(honorific, "cn") }}
-								{% endif %}
-							{% endfor %}
-						</div>
-					</div>
-				{% endif %}
-			</div>
 		</div>
-
 	</section>
 {% endblock %}
 
