--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -37,57 +37,59 @@
 		</div>
 
 		<!-- Main content -->
-		<div class="banner" id="library_banner">
-			<div class="banner_icon" id="library_icon">
-				<ion-icon name="book"></ion-icon>
-			</div>
-			<div class="banner_title" id="library_title">Library</div>
-		</div>
-		<div class="library_body">
-			<div class="superpanel" id="library_superpanel">
-				<!-- Register button -->
-				<button type="button" class="btn btn-light-green superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
-					data-target="#register_novel_modal_push" title="Add Series">
-					<ion-icon name="add-outline"></ion-icon>
-					<span> Register </span>
-				</button>
-				<!-- Update button -->
-				<button type="button" class="btn btn-yellow superpanel_menu_btn" id="menu_library_update_btn" title="Update Library" {{'disabled' if series|length == 0}}>
-					<ion-icon name="sync-outline"></ion-icon>
-					<span> Update </span>
-				</button>
-			</div>
-
-			<div class="superpanel_menu_searchbar_div" id="menu_library_searchbar_div">
-				<div class="md-form active-cyan-2 mb-3" id="menu_library_searchbar">
-					<input class="form-control" type="text" placeholder="Search Library" aria-label="Search">
+		<div class="section_body">
+			<div class="banner" id="library_banner">
+				<div class="banner_icon" id="library_icon">
+					<ion-icon name="book"></ion-icon>
 				</div>
+				<div class="banner_title" id="library_title">Library</div>
 			</div>
+			<div class="library_body">
+				<div class="superpanel" id="library_superpanel">
+					<!-- Register button -->
+					<button type="button" class="btn btn-light-green superpanel_menu_btn modal_trigger" id="menu_library_register_btn" data-toggle="modal"
+						data-target="#register_novel_modal_push" title="Add Series">
+						<ion-icon name="add-outline"></ion-icon>
+						<span> Register </span>
+					</button>
+					<!-- Update button -->
+					<button type="button" class="btn btn-yellow superpanel_menu_btn" id="menu_library_update_btn" title="Update Library" {{'disabled' if series|length == 0}}>
+						<ion-icon name="sync-outline"></ion-icon>
+						<span> Update </span>
+					</button>
+				</div>
 
-			<div class="flashpanel" id="library_flashpanel">
-				<!-- Flashed messages -->
-				{% with messages = get_flashed_messages(with_categories=true) %}
-					{{ flash_alert(messages) }}
-				{% endwith %}
-			</div>
-
-			<div class="mainpanel" id="library_mainpanel">
-				<!-- Novel entries -->
-				{% if series|length == 0 %}
-					<!-- No chapters to display -->
-					<div class="page_empty_div" id="no_series_div">
-						<div class="page_empty_img_div" id="no_series_img_div">
-							<img src="{{url_for('static', filename='library_nothing_here.jpg')}}" class="page_empty_img" id="no_series_img">
-						</div>
-						<div class="page_empty_text_div "id="no_series_text_div">
-							Nothing to see here. Start by hitting <span class="light-green-text font-weight-bold">Register</span>
-						</div>
+				<div class="superpanel_menu_searchbar_div" id="menu_library_searchbar_div">
+					<div class="md-form active-cyan-2 mb-3" id="menu_library_searchbar">
+						<input class="form-control" type="text" placeholder="Search Library" aria-label="Search">
 					</div>
-				{% else %}
-					{% for novel in series %}
-						{{ series_entry(novel) }}
-					{% endfor %}
-				{% endif %}
+				</div>
+
+				<div class="flashpanel" id="library_flashpanel">
+					<!-- Flashed messages -->
+					{% with messages = get_flashed_messages(with_categories=true) %}
+						{{ flash_alert(messages) }}
+					{% endwith %}
+				</div>
+
+				<div class="mainpanel" id="library_mainpanel">
+					<!-- Novel entries -->
+					{% if series|length == 0 %}
+						<!-- No chapters to display -->
+						<div class="page_empty_div" id="no_series_div">
+							<div class="page_empty_img_div" id="no_series_img_div">
+								<img src="{{url_for('static', filename='library_nothing_here.jpg')}}" class="page_empty_img" id="no_series_img">
+							</div>
+							<div class="page_empty_text_div "id="no_series_text_div">
+								Nothing to see here. Start by hitting <span class="light-green-text font-weight-bold">Register</span>
+							</div>
+						</div>
+					{% else %}
+						{% for novel in series %}
+							{{ series_entry(novel) }}
+						{% endfor %}
+					{% endif %}
+				</div>
 			</div>
 		</div>
 	</section>
