--- a/app/templates/modals/edit_honorific.html
+++ b/app/templates/modals/edit_honorific.html
@@ -29,7 +29,7 @@
               </div>
             </div>
             <div class="form-group form_group_cust mb-0">
-              <div style="width: 10rem; text-align: left;">
+              <div class="honorific_modal_options_div">
                 <div class="honorifics_form_help" id="affix_help">
                   <ion-icon name="help-circle-outline" data-toggle="tooltip" title="Should the translated honorific go before or after the subject?"></ion-icon>
                 </div>
@@ -47,7 +47,7 @@
               </div>
             </div>
             <div class="form-group form_group_cust mb-0">
-              <div style="width: 10rem; text-align: left;">
+              <div class="honorific_modal_options_div">
                 <div class="honorifics_form_help" id="affix_help">
                   <ion-icon name="help-circle-outline" data-toggle="tooltip" title="Seperate subject and suffixed honorific with a dash '-'"></ion-icon>
                 </div>
@@ -58,7 +58,7 @@
               </div>
             </div>
             <div class="form-group form_group_cust mb-0">
-              <div style="width: 10rem; text-align: left;">
+              <div class="honorific_modal_options_div">
                 <div class="honorifics_form_help" id="affix_help">
                   <ion-icon name="help-circle-outline" data-toggle="tooltip" title="Can this honorific be found without being attached to a subject (e.g. oniisan is standalone)"></ion-icon>
                 </div>
