--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -10,94 +10,96 @@
 		{% endif%}
 
 		<!-- Main content -->
-		<div class="toc_header">
-			<div class="toc_series_abbr_div">
-				{{ series.abbr }}
-			</div>
-			<div class="toc_series_title_div" onclick="window.open('{{series_url}}');">
-				<span style="cursor: pointer;"> {{series.title}} </span>
-			</div>
-		</div>
-		<div style="width: 60%; margin: auto;">
-			<hr style="border-top: 1px solid #000">
-		</div>
-		<div class="toc_body">
-			<div class="toc_menu_listing">
-				<div class="toc_menu_options">
-					<button type="button" class="btn btn-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
-						<ion-icon name="code-download-outline"></ion-icon>
-						<span>Current</span>
-					</button>
-					<button type="button" class="btn btn-yellow superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
-						action="{{url_for('library_series_update', series_code=series.code)}}">
-						<ion-icon name="sync-outline"></ion-icon>
-						<span>Update</span>
-					</button>
-					<a type="button" class="btn btn-amber superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
-						href="{{url_for('dictionaries_edit', dict_fname=dict_fname)}}">
-						<ion-icon name="reader-outline"></ion-icon>
-						<span>Dictionary</span>
-					</a>
-					<button type="button" class="btn btn-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
-						action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}" {{'disabled' if series.latest_ch == 0}}>
-						<ion-icon name="bookmarks" style="font-size: 1rem; margin-bottom: -0.1rem;"></ion-icon>
-						<span>Remove All Bookmarks</span>
-					</button>
+		<div class="section_body">
+			<div class="toc_header">
+				<div class="toc_series_abbr_div">
+					{{ series.abbr }}
+				</div>
+				<div class="toc_series_title_div" onclick="window.open('{{series_url}}');">
+					<span style="cursor: pointer;"> {{series.title}} </span>
 				</div>
 			</div>
-
-			<!-- Flaspanel -->
-			<div class="flashpanel" id="toc_flashpanel">
-				<!-- Flashed messages -->
-				{% with messages = get_flashed_messages(with_categories=true) %}
-					{{ flash_alert(messages) }}
-				{% endwith %}
+			<div style="width: 60%; margin: auto;">
+				<hr style="border-top: 1px solid #000">
 			</div>
-
-			<!-- Mainpanel -->
-			<div class="toc_main" id="toc_mainpanel">
-				<div class="toc_pagination">
+			<div class="toc_body">
+				<div class="toc_menu_listing">
+					<div class="toc_menu_options">
+						<button type="button" class="btn btn-success superpanel_menu_btn" id="jump_to_curr_btn" title="Jump to the chapter you left off">
+							<ion-icon name="code-download-outline"></ion-icon>
+							<span>Current</span>
+						</button>
+						<button type="button" class="btn btn-yellow superpanel_menu_btn" id="update_series_btn" title="Fetch the latest chapter"
+							action="{{url_for('library_series_update', series_code=series.code)}}">
+							<ion-icon name="sync-outline"></ion-icon>
+							<span>Update</span>
+						</button>
+						<a type="button" class="btn btn-amber superpanel_menu_btn" id="series_dictionary_btn" title="Edit this series' dictionary"
+							href="{{url_for('dictionaries_edit', dict_fname=dict_fname)}}">
+							<ion-icon name="reader-outline"></ion-icon>
+							<span>Dictionary</span>
+						</a>
+						<button type="button" class="btn btn-danger superpanel_menu_btn" id="rmv_all_bkmk_btn" title="Remove all bookmarks under this series"
+							action="{{url_for('library_series_toc_bookmark_all', series_code=series.code)}}" {{'disabled' if series.latest_ch == 0}}>
+							<ion-icon name="bookmarks" style="font-size: 1rem; margin-bottom: -0.1rem;"></ion-icon>
+							<span>Remove All Bookmarks</span>
+						</button>
+					</div>
 				</div>
-				<div class="toc_chapter_listing">
-					{% if series.latest_ch == 0 %}
-						<!-- No chapters to display -->
-						<div class="page_empty_div" id="no_chapters_div">
-							<div class="page_empty_img_div" id="no_chapters_img_div">
-								<img src="{{url_for('static', filename='toc_nothing_here.jpg')}}" class="page_empty_img" id="no_chapters_img">
-							</div>
-							<div class="page_empty_text_div" id="no_chapters_text_div">
-								No chapters here. Try hitting <span class="text-warning font-weight-bold">Update</span>
-							</div>
-						</div>
-					{% else %}
-						<!-- Non-empty chapter directory -->
-						{% for index in range(series.latest_ch) %}
-							{% set ch = index + 1 %}
 
-							{% set series_base_url = url_for('library_series_chapter', series_code=series.code, ch=ch) %}
-							{% set bookmark_url = url_for('library_series_toc_bookmark', series_code=series.code, ch=ch) %}
-							{% set setcurrent_url = url_for('library_series_toc_setcurrent', series_code=series.code, ch=ch) %}
+				<!-- Flaspanel -->
+				<div class="flashpanel" id="toc_flashpanel">
+					<!-- Flashed messages -->
+					{% with messages = get_flashed_messages(with_categories=true) %}
+						{{ flash_alert(messages) }}
+					{% endwith %}
+				</div>
 
-							{% set visited = ch < series.current_ch %}
-							{% set current = ch == series.current_ch %}
-							{% set bookmarked = ch in series.bookmarks %}
-
-							<div class="toc_chapter {{'viewed_chapter' if visited}} {{'current_chapter' if current}} {{'bookmarked_chapter' if bookmarked}}" id="{{ch}}">
-								<a class="toc_chapter_text" href="{{series_base_url}}"> <!--Open chapters in new tab by defualt: target="_blank"-->
-									Chapter {{ch}}
-								</a>
-								<div class="toc_chapter_actionbar {{'active_actionbar' if bookmarked}}">
-									<div class="toc_chapter_setcurrent " action="{{setcurrent_url}}" id="setcurrent_form_{{ch}}" title="Set this as the current chapter">
-										<ion-icon name="code-download-outline" style="margin-bottom: -0.5rem"></ion-icon>
-									</div>
-									<div class="toc_chapter_bookmark {{'active_bookmark' if bookmarked}}" action="{{bookmark_url}}" id="bookmark_form_{{ch}}"
-										title="Bookmark this chapter">
-										<ion-icon name="bookmark{{'-outline' if not bookmarked}}" style="margin-bottom: -0.5rem"></ion-icon>
-									</div>
+				<!-- Mainpanel -->
+				<div class="toc_main" id="toc_mainpanel">
+					<div class="toc_pagination">
+					</div>
+					<div class="toc_chapter_listing">
+						{% if series.latest_ch == 0 %}
+							<!-- No chapters to display -->
+							<div class="page_empty_div" id="no_chapters_div">
+								<div class="page_empty_img_div" id="no_chapters_img_div">
+									<img src="{{url_for('static', filename='toc_nothing_here.jpg')}}" class="page_empty_img" id="no_chapters_img">
+								</div>
+								<div class="page_empty_text_div" id="no_chapters_text_div">
+									No chapters here. Try hitting <span class="text-warning font-weight-bold">Update</span>
 								</div>
 							</div>
-						{% endfor %}
-					{% endif %}
+						{% else %}
+							<!-- Non-empty chapter directory -->
+							{% for index in range(series.latest_ch) %}
+								{% set ch = index + 1 %}
+
+								{% set series_base_url = url_for('library_series_chapter', series_code=series.code, ch=ch) %}
+								{% set bookmark_url = url_for('library_series_toc_bookmark', series_code=series.code, ch=ch) %}
+								{% set setcurrent_url = url_for('library_series_toc_setcurrent', series_code=series.code, ch=ch) %}
+
+								{% set visited = ch < series.current_ch %}
+								{% set current = ch == series.current_ch %}
+								{% set bookmarked = ch in series.bookmarks %}
+
+								<div class="toc_chapter {{'viewed_chapter' if visited}} {{'current_chapter' if current}} {{'bookmarked_chapter' if bookmarked}}" id="{{ch}}">
+									<a class="toc_chapter_text" href="{{series_base_url}}"> <!--Open chapters in new tab by defualt: target="_blank"-->
+										Chapter {{ch}}
+									</a>
+									<div class="toc_chapter_actionbar {{'active_actionbar' if bookmarked}}">
+										<div class="toc_chapter_setcurrent " action="{{setcurrent_url}}" id="setcurrent_form_{{ch}}" title="Set this as the current chapter">
+											<ion-icon name="code-download-outline" style="margin-bottom: -0.5rem"></ion-icon>
+										</div>
+										<div class="toc_chapter_bookmark {{'active_bookmark' if bookmarked}}" action="{{bookmark_url}}" id="bookmark_form_{{ch}}"
+											title="Bookmark this chapter">
+											<ion-icon name="bookmark{{'-outline' if not bookmarked}}" style="margin-bottom: -0.5rem"></ion-icon>
+										</div>
+									</div>
+								</div>
+							{% endfor %}
+						{% endif %}
+					</div>
 				</div>
 			</div>
 		</div>
