Significant visual and functional updates to multiple routes
- Updated library entries to display the novel's code
- Removed line numbers from CodeMirror in the dictionary editor route
- Chapter route's javascript significantly refactored towards JQuery
- Added a bookmark toggle button in the chapter route
- Added language codes to html element and methods to convert Language enum into said codes
- Fixed line display issues for long lines or translation glitches in chapters
- Fixed dictionary edit toast graphical error
- Feature: Text Insertion utility buttons in dictionary editor for ease of editing

--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -53,8 +53,25 @@
 								<ion-icon name="scan-outline"></ion-icon>
 							</button>
 						</div>
-						<div class="dictionary_edit_abbr_tag">
-							{{dict_fname}}
+					</div>
+					<div class="dictionary_edit_utilbelt">
+						<div class="dictionary_edit_utility_btn" id="util_new_line" title="Insert New Line">
+							new line
+						</div>
+						<div class="dictionary_edit_utility_btn" id="util_new_def" title="Insert Definition">
+							definition
+						</div>
+						<div class="dictionary_edit_utility_btn" id="util_new_name" title="Insert Name Tag">
+							name tag
+						</div>
+						<div class="dictionary_edit_utility_btn" id="util_insrt_name_div" title="Insert Name Divider">
+							name div
+						</div>
+						<div class="dictionary_edit_utility_btn" id="util_insrt_comm_div" title="Insert Comment Divider">
+							comment div
+						</div>
+						<div class="dictionary_edit_utility_btn" id="util_del_line" title="Delete Line">
+							del line
 						</div>
 					</div>
 					<textarea id="dictionary_editor" style="display: none;">{{dict_content}}</textarea>
