--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
-<html data-theme={%-block theme-%}"light"{%-endblock-%}>
+<html data-theme={% block html_theme %}"light"{% endblock %}
+	lang={% block html_lang %}"en"{% endblock %}>
 <head>
 	<!-- Required meta tags -->
     <meta charset="utf-8">
