--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -92,7 +92,7 @@
 											<ion-icon name="code-download-outline" style="margin-bottom: -0.5rem"></ion-icon>
 										</div>
 										<div class="toc_chapter_bookmark {{'active_bookmark' if bookmarked}}" action="{{bookmark_url}}" id="bookmark_form_{{ch}}"
-											title="Bookmark this chapter">
+											title="Toggle bookmark">
 											<ion-icon name="bookmark{{'-outline' if not bookmarked}}" style="margin-bottom: -0.5rem"></ion-icon>
 										</div>
 									</div>
