--- a/app/templates/subcomponents/series_entry.html
+++ b/app/templates/subcomponents/series_entry.html
@@ -22,6 +22,10 @@
 					<td class="entry_info_table_data_column" id="host">{{novel.host}} [{{novel.lang[-2:]}}]</td>
 				</tr>
 				<tr>
+					<td class="entry_info_table_label_column">Book Code</td>
+					<td class="entry_info_table_data_column" id="host">{{novel.code}}</td>
+				</tr>
+				<tr>
 					<td class="entry_info_table_label_column">Progress</td>
 					<td class="entry_info_table_data_column" id="progress"><span id="current_ch">{{novel.current_ch}}</span> / <span id="latest_ch">{{novel.latest_ch}}</span></td>
 				</tr>
