--- a/app/static/main.css
+++ b/app/static/main.css
@@ -63,7 +63,7 @@ html[data-theme='dark']{
 
   /* Chapter dark palette */
   --chapter_maintxt_color: #d0d0d0;
-  --chapter_subtxt_color: #505050;
+  --chapter_subtxt_color: #6f6f6f;
   --chapter_day_night_toggle_btn_color: #bea140;
   --chapter_scroll_bar_color: white;
   --chapter_word_color: #ffd000;
@@ -666,7 +666,7 @@ table.entry_info_table{
 }
 .entry_details{
   margin: 1rem 0;
-  line-height: 2rem;
+  line-height: 1.5rem;
   font-size: 1rem;
 }
 .entry_action_bar{
@@ -922,14 +922,37 @@ table.entry_info_table{
   filter: brightness(1.3);
 }
 .series_progress{
+  position: unset;
   width: fit-content;
   color: var(--chapter_maintxt_color);
+  margin: 2rem auto;
+  padding: 0.5rem 1rem;
+  font-size: 1.3rem;
+  border: 1px solid var(--chapter_maintxt_color);
+}
+.chapter_bookmark_btn{
   position: absolute;
   top: 0.5rem;
-  left: 3rem;
-  font-size: 1.3rem;
-  padding: 0.5rem 1rem;
-  border: 1px solid var(--chapter_maintxt_color);
+  left: 0.5rem;
+  width: 3rem;
+  height: 3rem;
+  background: #292929;
+  color: #565656;
+  cursor: pointer;
+  border: 1px solid var(--toc_bookmarked_highlight)
+}
+.chapter_bookmark_btn_active{
+  color: var(--toc_bookmarked_highlight);
+}
+.chapter_bookmark_btn:hover{
+  filter: brightness(1.2);
+}
+.chapter_bookmark_btn ion-icon{
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 1.25rem;
 }
 .content_title_div{
   border-top: 1px solid #9a9a9a;
@@ -969,18 +992,23 @@ table.entry_info_table{
   padding: 2rem 0;
 }
 .content_line_div{
+  display: flex;
+  flex-direction: column;
   width: 100%;
   margin: 4rem 0;
 }
-.content_line{
+.content_line_div p{
   width: fit-content;
+  display: inline-block;
+  word-break: break-word;
+}
+.content_line{
   font-size: 1.5rem;
   margin: 0.5rem 0;
   color: var(--chapter_maintxt_color);
 }
 .content_raw{
-  width: fit-content;
-  font-size: 1rem;
+  font-size: 1.2rem;
   color: var(--chapter_subtxt_color);
 }
 .chapter_image_div{
@@ -1276,16 +1304,34 @@ table.entry_info_table{
 .dictionary_edit_toolbelt_btn ion-icon{
   margin: 0 0.2rem -0.2rem 0;
 }
-.dictionary_edit_abbr_tag{
-  position: absolute;
-  width: fit-content;
-  right: 0;
-  bottom: 0;
-  padding: 0.5rem 2rem;
+.dictionary_edit_utilbelt{
+  display: flex;
+  font-family: Lucida Console, Courier, monospace;
+  font-variant: all-petite-caps;
+  font-size: 1.1rem;
+  text-align: center;
   color: white;
-  font-size: 1.2rem;
-  font-family: monospace;
+
+  /* Make it unselectable */
+  user-select: none;
+  -moz-user-select: none;
+  -khtml-user-select: none;
+  -webkit-user-select: none;
+  -o-user-select: none;
+}
+.dictionary_edit_utility_btn{
+  /* Spread 6 menu buttons evenly */
+  width: calc(100% / 6);
+  padding: 0.3rem 0;
+  cursor: pointer;
+  border-left: 1px solid;
   background: var(--dictionary_edit_color_primary);
+}
+.dictionary_edit_utility_btn:first-child{
+  border-left: none;
+}
+.dictionary_edit_utility_btn:hover{
+  filter: brightness(1.2);
 }
 #dictionary_edit_mainpanel .CodeMirror{
   height: fit-content;
@@ -1323,6 +1369,7 @@ table.entry_info_table{
 
 .toastpanel{
   position: fixed;
+  z-index: 2;
   display: flex;
   flex-direction: column-reverse;
   bottom: 0;
@@ -1551,9 +1598,6 @@ table.entry_info_table{
   #dictionary_edit_title{
     font-size: 2rem;
   }
-  .dictionary_edit_abbr_tag{
-    display: none;
-  }
 
   /* Responsive TOC */
   #jump_to_curr_btn span{
@@ -1567,6 +1611,9 @@ table.entry_info_table{
   }
 
   /* Responsive Chapter */
+  .chapter_bookmark_btn{
+    left: 3rem;
+  }
   .section_chapter .super_navpanel{
     right: 3rem;
   }
@@ -1615,6 +1662,9 @@ table.entry_info_table{
     width: fit-content;
     margin: 0.5rem auto;
   }
+  .minibanner{
+    text-align: center;
+  }
   .entry_action_bar{
     bottom: unset;
     top: 1rem;
@@ -1641,6 +1691,9 @@ table.entry_info_table{
   /* Responsive Dictionary */
   .section_dictionary{
     min-width: unset;
+  }
+  #dictionary_edit_mainpanel .CodeMirror{
+    height: 500px;
   }
 
   /* Responsive TOC */
@@ -1690,11 +1743,5 @@ table.entry_info_table{
 @media only screen and (max-width: 460px){
   html, html[data-theme='dark']{
     font-size: 0.6rem;
-  }
-
-  /* Responsive Chapter */
-  .series_progress{
-    position: unset;
-    margin: 2rem auto;
   }
 }
