--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -56,19 +56,19 @@
 					</div>
 					<div class="dictionary_edit_utilbelt">
 						<div class="dictionary_edit_utility_btn" id="util_new_line" title="Insert New Line">
-							new line
+							\n
 						</div>
 						<div class="dictionary_edit_utility_btn" id="util_new_def" title="Insert Definition">
-							definition
+							defn
 						</div>
 						<div class="dictionary_edit_utility_btn" id="util_new_name" title="Insert Name Tag">
-							name tag
+							@name
 						</div>
 						<div class="dictionary_edit_utility_btn" id="util_insrt_name_div" title="Insert Name Divider">
-							name div
+							|
 						</div>
 						<div class="dictionary_edit_utility_btn" id="util_insrt_comm_div" title="Insert Comment Divider">
-							comment div
+							divider
 						</div>
 						<div class="dictionary_edit_utility_btn" id="util_del_line" title="Delete Line">
 							del line
