--- a/app/templates/dictionary.html
+++ b/app/templates/dictionary.html
@@ -3,6 +3,7 @@
 {% from "subcomponents/dictionary_entry.html" import dictionary_entry %}
 
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#f58e38{% endblock %}
 {% block content %}
 	<section class="section_dictionary">
 		<!-- Navigation bar -->
