--- a/app/templates/dictionary_edit.html
+++ b/app/templates/dictionary_edit.html
@@ -3,6 +3,7 @@
 {% from "modals/discard_dict_changes.html" import discard_dict_changes %}
 
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#262829{% endblock %}
 {% block content %}
 	<section class="section_dictionary_edit">
 		<!-- Navigation bar -->
