--- a/app/templates/honorifics.html
+++ b/app/templates/honorifics.html
@@ -6,6 +6,7 @@
 {% from "modals/remove_honorific.html" import remove_honorific_modal %}
 
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#880e4f{% endblock %}
 {% block content %}
 	<section class="section_honorifics">
 		<!-- Navigation bar -->
