--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,4 +1,5 @@
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#575c69{% endblock %}
 {% block content %}
 	<section class="section_index">
 		<div class="customtrans_logo_div">
