--- a/app/templates/library.html
+++ b/app/templates/library.html
@@ -5,7 +5,9 @@
 {% from "modals/edit_novel.html" import edit_novel_modal %}
 {% from "modals/remove_novel.html" import remove_novel_modal %}
 
+
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#d83939{% endblock %}
 {% block content %}
 	<section class="section_library">
 		<!-- Navigation bar -->
