--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -1,7 +1,9 @@
 {% from "misc/super_navpanel.html" import super_navpanel %}
 {% from "misc/flash_alert.html" import flash_alert %}
 
+
 {% extends 'general_layout.html' %}
+{% block hdr_theme %}#9e1111{% endblock %}
 {% block content %}
 	<section class="section_toc">
 		<!-- Navigation bar -->
