--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -6,8 +6,15 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- Bootstrap CSS -->
-    <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/css/bootstrap.min.css" integrity="sha384-9aIt2nRpC12Uk9gS9baDl411NQApFmC26EwAOH8WgZl5MYYxFfc+NcPb1dKGj7Sk" crossorigin="anonymous"> -->
+    <!-- Custom mobile browser header color -->
+    <meta name="hdr-color" color="{% block hdr_theme %}#000000{% endblock %}">
+    <!-- Chrome, Firefox OS and Opera -->
+	<meta name="theme-color" content="{{self.hdr_theme()}}">
+	<!-- Windows Phone -->
+	<meta name="msapplication-navbutton-color" content="{{self.hdr_theme()}}">
+	<!-- iOS Safari -->
+	<meta name="apple-mobile-web-app-status-bar-style" content="{{self.hdr_theme()}}">
+
     <!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 	<!-- Google Fonts -->
