--- a/app/templates/modals/register_novel.html
+++ b/app/templates/modals/register_novel.html
@@ -33,7 +33,7 @@
             <div class="form-group form_group_cust">
               {{ form.series_code.label(class="form-control-label label_cust") }}
               <div class="form_input_div md-form active-cyan-2">
-                {{ form.series_code(class="form-control input_cust", placeholder="http://ncode.syosetu.com/XXXXXXX") }}
+                {{ form.series_code(class="form-control input_cust", placeholder="https://ncode.syosetu.com/{series_code}") }}
               </div>
               <button type="button" class="btn" id="host_search_engine_btn" title="Go to this host's search engine">
                 <ion-icon name="search-circle"></ion-icon>
