--- a/app/templates/misc/error_page.html
+++ b/app/templates/misc/error_page.html
@@ -23,3 +23,12 @@
 		</div>
 	</div>
 {% endblock %}
+
+{% block style_area %}
+html, body{
+	width: 100% !important;
+	height: 100% !important;
+	margin: 0 !important;
+	padding: 0 !important;
+}
+{% endblock %}
