--- a/app/templates/series_toc.html
+++ b/app/templates/series_toc.html
@@ -17,7 +17,7 @@
 				<div class="toc_series_abbr_div">
 					{{ series.abbr }}
 				</div>
-				<div class="toc_series_title_div" onclick="window.open('{{series_url}}');">
+				<div class="toc_series_title_div" onclick="window.open('{{series.url}}');">
 					<span style="cursor: pointer;"> {{series.title}} </span>
 				</div>
 			</div>
