--- a/app/templates/general_layout.html
+++ b/app/templates/general_layout.html
@@ -15,6 +15,8 @@
 	<!-- iOS Safari -->
 	<meta name="apple-mobile-web-app-status-bar-style" content="{{self.hdr_theme()}}">
 
+    <!-- JQuery UI -->
+	<link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/smoothness/jquery-ui.css">
     <!-- Font Awesome -->
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css">
 	<!-- Google Fonts -->
@@ -35,6 +37,12 @@
 
 	<title>{{ title }}</title>
 
+	<!-- Page specific style -->
+	<style type="text/css">
+		{% block style_area %}
+		{% endblock style_area %}
+	</style>
+
 	<!-- Meta variables (jinja2 vars available to JS) -->
 	{% block metavars %}
 	{% endblock metavars %}
@@ -47,6 +55,7 @@
 
 	<!-- JQuery -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+	<script src="//code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 	<!-- Bootstrap tooltips -->
 	<script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.4/umd/popper.min.js"></script>
 	<!-- Bootstrap core JavaScript -->
